Added price calculation to API
