# openapi/sis-api.yaml
@@ -5,12 +5,12 @@ info:
 servers:
   - url: /api/v1
 tags:
-  - name: Authorization
   - name: User
   - name: User Profile
-  - name: Membership
   - name: Quotes
+  - name: Membership
   - name: Insurance Policy
+  - name: Authorization
 paths:
   /secret:
     get:
@@ -634,6 +634,38 @@ paths:
           content: { }
         404:
           description: Policy doesn't exist
+          content: { }
+  /quote/{quote_id}/calculate-price:
+    post:
+      tags:
+      - Quotes
+      summary: Calculate and store a price for a quote
+      operationId: calculate_price
+      parameters:
+        - name: quote_id
+          in: path
+          description: The id of the quote to update
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+        required: false
+      responses:
+        200:
+          description: Successfully calculated quote
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Quote'
+        400:
+          description: Quote is not complete
+          content: { }
+        404:
+          description: Quote doesn't exist
           content: { }
 
 components:
